# ledger-app-ton

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  env.sh  ledger_app.toml  upload.sh
.doxygen/: Doxyfile
.github/workflows/: ci-workflow.yml  python_client_checks.yml
doc/: COMMANDS.md  CUSTOM_DATA.md  MESSAGES.md  TRANSACTION.md
fuzzing/: fuzz_tx_parser.cc
fuzzing/extra/: TxParser.cmake
src/: address.c  address.h  constants.h  crypto.c  crypto.h  globals.h  io.c  io.h  main.c  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h  params.h
src/common/: base64.c  base64.h  bip32_check.c  bip32_check.h  bits.c  bits.h  buffer.c  buffer.h  cell.c  cell.h  crc16.c  crc16.h  encoding.c  encoding.h  format.c  format.h  format_address.c  format_address.h  format_bigint.c  format_bigint.h  hints.c  hints.h  int256.c  int256.h  read.c  read.h  types.h
src/handler/: get_address_proof.c  get_address_proof.h  get_app_settings.c  get_app_settings.h  get_public_key.c  get_public_key.h  sign_data.c  sign_data.h  sign_msg.c  sign_msg.h  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.h
src/msg/: hash_msg.c  hash_msg.h
src/proof/: proof_deserialize.c  proof_deserialize.h
src/sign_data/: sign_data_deserialize.c  sign_data_deserialize.h
src/transaction/: cell.c  cell.h  deserialize.c  deserialize.h  hash.c  hash.h  hints.c  hints.h  transaction_hints.c  transaction_hints.h  types.h  utils.c
src/ui/: display.c  display.h  display_address_nbgl.c  display_bagl.c  display_message_nbgl.c  display_proof_nbgl.c  display_sign_data_nbgl.c  display_transaction_nbgl.c  hint_buffers_nbgl.c  hint_buffers_nbgl.h  menu.c  menu.h  menu_bagl.c  menu_nbgl.c
src/ui/action/: validate.c  validate.h
src/ui/helpers/: display_address.c  display_address.h  display_proof.c  display_proof.h  display_transaction.c  display_transaction.h
tests/: README.md  conftest.py  requirements.txt  setup.cfg  test_app_mainmenu.py  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_proof_cmd.py  test_pubkey_cmd.py  test_settings_cmd.py  test_sign_cmd.py  test_sign_custom_data.py  test_version_cmd.py  utils.py
tests/application_client/: my_builder.py  ton_command_sender.py  ton_response_unpacker.py  ton_sign_data.py  ton_transaction.py  ton_utils.py
tests/ledgercomm/: test_appname_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py
tests/ledgercomm/boilerplate_client/: boilerplate_cmd.py
tests/ledgercomm/boilerplate_client/exception/: device_exception.py  errors.py
tests/speculos/: test_pubkey_cmd.py  test_sign_cmd.py  test_version_cmd.py
tests/speculos/boilerplate_client/: boilerplate_cmd.py
tests/speculos/boilerplate_client/exception/: __init__.py  device_exception.py  errors.py
unit-tests/: CMakeLists.txt  strlcpy_impl.c  test_base64.c  test_bits.c  test_buffer.c  test_crc16.c  test_encoding.c  test_format_bigint.c  test_tx_parser.c
